--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "build": "BABEL_ENV=production babel src -d dist",
+    "start": "start-storybook -p 9009 -s public",
     "test": "react-scripts test",
-    "storybook": "start-storybook -p 9009 -s public",
+    "build": "BABEL_ENV=production babel src -d dist",
     "build-storybook": "build-storybook -s public"
   },
   "babel": {
